<resources>
    <string name="app_name">Miser</string>
    <string name="settings">Categories</string>

    <string name="begin_date_for_calendar" translatable="false">begin</string>
    <string name="end_date_for_calendar" translatable="false">end</string>

    <string-array name="type">
        <item>Expenses</item>
        <item>Income</item>
    </string-array>

    <string-array name="currency">
        <item>RUB</item>
        <item>USD</item>
        <item>EUR</item>
        <item>BYN</item>
        <item>UAH</item>
        <item>AZN</item>
        <item>LTL</item>
        <item>TMT</item>
        <item>KGS</item>
        <item>KZT</item>
        <item>MNT</item>
        <item>GEL</item>
        <item>BGN</item>
        <item>UZS</item>
    </string-array>
    <string-array name="questions">
        <item>How to begin?</item>
        <item>How to rename categories?</item>
        <item>How to change the currency designation?</item>
        <item>How to change the amount of an account?</item>
        <item>How to transfer money between accounts?</item>
        <item>How to add a transaction?</item>
        <item>How to edit a transaction?</item>
        <item>How to delete a transaction?</item>
    </string-array>

    <string-array name="answers">
        <item>
            First, rename the categories of accounts and income - costs in
            according to your preferences.
            Then enter the values ​​of the amounts of your accounts in accordance with the real
            state of affairs. Select the preferred currency. Then you can add income - costs transactions.
        </item>
        <item>
            Open the options menu on the first  screen (Dashboard). Please select
            menu item "Category". Next, find the desired category and click
            "Editing".
        </item>
        <item>
            Open the options menu on the first screen (Dashboard). Please select
            menu item "Currency". Select the desired currency designation and click OK.
        </item>
        <item>
            The status of the accounts is displayed on the first screen (Dashboard). Click and
            hold down the card with the selected account. The dialog box for changing the amount appears.
            Enter the amount and click "OK".
        </item>
        <item>
            The status of the accounts is displayed on the first screen (Dashboard). Click and
            hold down the card with the selected account. The dialog box for changing the amount appears.
            Check the box for "Transfer" and select from which account the amount will be written off.
        </item>
        <item>
            You can add a transaction from any application screen by clicking
            "+" button. Next, a dialog box appears,
            in which you can enter the necessary information about the transaction.
        </item>
        <item>
            You can edit the transaction on the detailed screen
            display the corresponding category. Swipe on the transaction to the right, start editing mode.
        </item>

        <item>
            You can delete a transaction on the detailed screen
            display the corresponding category. Swipe on the transaction to the left, start the delete mode.
        </item>
    </string-array>

    <string-array name="income_category">
        <item>Salary</item>
        <item>Advance</item>
        <item>Business</item>
        <item>Other</item>
    </string-array>

    <string-array name="cost_category">
        <item>Food</item>
        <item>Housing</item>
        <item>Public transport</item>
        <item>Sport</item>
        <item>Car</item>
        <item>Entertainment</item>
        <item>Education</item>
        <item>Goods </item>
        <item>Medicine</item>
        <item>Gifts</item>
        <item>Credit</item>
        <item>Mobile</item>
        <item>Clothing</item>
        <item>Other</item>
    </string-array>

    <string-array name="accounts">
        <item>Cash</item>
        <item>Credit card</item>
        <item>Bank account</item>
        <item>Deposit</item>
    </string-array>
    <string name="title_cost">Expenses</string>
    <string name="title_incom">Income</string>


    <string name="Insert_OK">The transaction has been added</string>
    <string name="db_error">The database error</string>
    <string name="no_comments">no comments</string>
    <string name="del_dialog_title">To delete the transaction?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_ok">The transaction is removed</string>
    <string name="account_hint">New amount</string>
    <string name="transfer_enable">Transfer from the account</string>
    <string name="incom_card">Income</string>
    <string name="cost_card">Expenses</string>
    <string name="dashboard">Dashboard</string>
    <string name="start_title">from</string>
    <string name="end_title">to</string>
    <string name="menu_item_info">Help</string>
    <string name="accounts_grope">Accounts</string>
    <string name="edit_name">New name</string>
    <string name="category_rename_ok">The category has been changed</string>
    <string name="menu_item_currency">Currency</string>
    <string name="title_dialog_currency">Currency</string>
    <string name="currency_changed">The currency is changed</string>
    <string name="button_day">Day</string>
    <string name="button_week">Week</string>
    <string name="button_month">Month</string>
    <string name="comment">Comments</string>
    <string name="summ">Amount</string>
    <string name="summ_transfer">Amount of the transfer</string>
    <string name="emptyView">Transactions for the selected period was not found</string>
    <string name="rateApp">Rate app</string>
    <string name="market_error">Could not open Android market, please check if the market app installed
        or not. Try again later</string>
    <string name="menu_item_disabling_ads">Disable ads</string>

    <!-- set advertising preference -->
    <string name="disable_adMob_key" translatable="false">disable</string>
    <string name="info_disable_ads">Purchase for disabling ads done</string>
    <string name="info_error_ads_disabling">Error, try again later </string>

    <!-- Key name for Notification -->
    <string name="pref_notification_key" translatable="false">notify_key</string>
    <string name="pref_notification_label" translatable="true">Notification</string>


    <string name="cost_6">Expenses by months</string>
    <string name="month_jan">Jan</string>
    <string name="month_feb">Feb</string>
    <string name="month_mar">Mar</string>
    <string name="month_apr">Apr</string>
    <string name="month_may">May</string>
    <string name="month_jun">Jun</string>
    <string name="month_jul">Jul</string>
    <string name="month_aug">Aug</string>
    <string name="month_sep">Sep</string>
    <string name="month_okt">Okt</string>
    <string name="month_nov">Nov</string>
    <string name="month_dec">Dec</string>
    <string name="income_6">Income by months</string>
    <string name="radio_button_set">Set</string>
    <string name="title_add_card">Transaction</string>
    <string name="creating">Creating</string>
    <string name="no_data_graph">No values!</string>

    <string name="main_notification_channel">Miser reminder</string>
    <string name="addExpenses_notification_title">Miser reminder</string>
    <string name="addExpenses_notification_main_text">Time to add costs</string>
    <string name="notification_item_menu">Notification</string>
    <string name="remove_action">Removed!</string>
    <string name="undo_action">Undo?</string>
    <string name="editing">Editing</string>
    <string name="notification_is_on">Notification is ON</string>
    <string name="notification_is_off">Notification is OFF</string>


</resources>
